--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
+    "firebase": "^9.6.10",
+    "postcss": "^8.4.12",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
