--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.10",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
