--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "google-spreadsheet": "^3.2.0",
-    "googleapis": "^100.0.0"
+    "googleapis": "^100.0.0",
+    "twilio": "^3.76.1"
   },
   "devDependencies": {
     "@types/google-spreadsheet": "^3.2.0",
