--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "yarn build && firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@firebase/app-types": "0.x",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "google-spreadsheet": "^3.2.0",
