--- a/functions/package.json
+++ b/functions/package.json
@@ -2,10 +2,10 @@
   "name": "functions",
   "scripts": {
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "dev": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "fb:deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -14,6 +14,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "@firebase/app-types": "0.x",
+    "@types/node": "^18.0.6",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "google-spreadsheet": "^3.2.0",
@@ -21,6 +23,7 @@
     "twilio": "^3.76.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/google-spreadsheet": "^3.2.0",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
