--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "deploy": "tsc && vite build && firebase deploy --only hosting",
-    "deploy:testing": "tsc && vite build --mode testing && firebase hosting:channel:deploy testing"
+    "fb:deploy": "vite build && firebase deploy --only hosting",
+    "deploy:testing": "vite build --mode testing && firebase hosting:channel:deploy testing"
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
