--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.15.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23"
   },
